Blog section markup added

--- a/index.html
+++ b/index.html
@@ -11,42 +11,73 @@
 <body>
     <!-- Header start -->
     <header>
-
+        <div class="container">
+            <div class="nav">
+                <a href="" class="brand">LeaderBoard</a>
+                <navbar>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Work</a></li>
+                    </ul>
+                </navbar>
+            </div>
+        </div>
     </header>
     <!-- header end -->
     <!-- Main area start -->
     <main>
-        <!-- Top players & blogs section start -->
+        <!-- Top players & Latest blogs section start -->
         <section>
-            <div class="top-players">
-                <div class="players">
-                    <div class="player">
-                        <img src="images/players/player-1.png" alt="">
-                        <h3>Player-1</h3>
+            <div class="container">
+                <!-- Top players section start -->
+                <div class="top-players">
+                    <div class="players">
+                        <div class="player">
+                            <img src="images/players/player-1.png" alt="">
+                            <h3>Player-1</h3>
+                        </div>
+                        <div class="player">
+                            <img src="images/players/player-2.png" alt="">
+                            <h3>Player-2</h3>
+                        </div>
+                        <div class="player">
+                            <img src="images/players/player-3.png" alt="">
+                            <h3>Player-3</h3>
+                        </div>
+                        <div class="player">
+                            <img src="images/players/player-4.png" alt="">
+                            <h3>Player-4</h3>
+                        </div>
+                        <div class="player">
+                            <img src="images/players/player-5.png" alt="">
+                            <h3>Player-5</h3>
+                        </div>
+                        <div class="player">
+                            <img src="images/players/player-6.png" alt="">
+                            <h3>Player-6</h3>
+                        </div>
                     </div>
-                    <div class="player">
-                        <img src="images/players/player-2.png" alt="">
-                        <h3>Player-2</h3>
-                    </div>
-                    <div class="player">
-                        <img src="images/players/player-3.png" alt="">
-                        <h3>Player-3</h3>
-                    </div>
-                    <div class="player">
-                        <img src="images/players/player-4.png" alt="">
-                        <h3>Player-4</h3>
-                    </div>
-                    <div class="player">
-                        <img src="images/players/player-5.png" alt="">
-                        <h3>Player-5</h3>
-                    </div>
-                    <div class="player">
-                        <img src="images/players/player-6.png" alt="">
-                        <h3>Player-6</h3>
+                </div>
+                <!-- Latest blogs start -->
+                <div class="latest-blogs-header">
+                    <h1 class="latest-blogs-title">Latest Blogs</h1>
+                </div>
+                <div class="latest-blogs">
+                    <div class="blog">
+                        <div class="blog-thumbnail">
+                            <img src="images/blogs/blog-3.png" alt="blog-3 thumbnail">
+                        </div>
+                        <div class="blog-details">
+                            <div class="blog-title">
+                                <h3>13 of my favourite UX/UI goddies</h3>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
+
     </main>
 </body>
 
