blog author added

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                         <div class="blog-details">
                             <div class="blog-title">
                                 <h3>13 of my favourite UX/UI goddies</h3>
+                                By <span class="author">Samiul Islam</span>
                             </div>
                         </div>
                     </div>
