Markup & Design complete

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
     <header class="header-section">
         <div class="container header-bg-none">
             <div class="nav">
-                <a href="" class="brand"><i class="fab fa-codiepie"></i>LeaderBoard</a>
+                <a href="index.html" class="brand"><i class="fab fa-codiepie"></i>LeaderBoard</a>
                 <navbar>
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Work</a></li>
+                        <li><a href="#trending-courses">Courses</a></li>
                         <li><a href="#">
                                 <img class="menu-profile-img" src="images/players/player-1.png" alt="">
                             </a></li>
@@ -89,7 +90,7 @@
                         <div class="blog-details">
                             <div class="blog-title">
                                 <h3>13 of my favourite UX/UI goddies</h3>
-                                <span>By</span> <span class="author">Samiul Islam</span>
+                                <span>By <a class="author">Samiul Islam</a></span>
                             </div>
                         </div>
                     </div>
