--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <div class="blog-details">
                             <div class="blog-title">
                                 <h3>Top 10 technology discovered in 2021</h3>
-                                By <span class="author">Samiul Islam</span>
+                                <span>By</span> <span class="author">Samiul Islam</span>
                             </div>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                             <div class="blog-title">
                                 <h3>UI cheat sheet:
                                     list vs grids</h3>
-                                By <span class="author">Samiul Islam</span>
+                                <span>By</span> <span class="author">Samiul Islam</span>
                             </div>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                             <div class="blog-title">
                                 <h3>7 typography tips
                                     for interface design</h3>
-                                By <span class="author">Samiul Islam</span>
+                                <span>By</span> <span class="author">Samiul Islam</span>
                             </div>
                         </div>
                     </div>
@@ -169,7 +169,7 @@
                             <img src="images/courses/course-2.png" alt="Course 2 banner">
                         </div>
                         <div class="course-details">
-                            <h3 class="course-title">PowerPoint 2020 Master Powerpoint Cour</h3>
+                            <h3 class="course-title">PowerPoint 2020 Master Powerpoint Course</h3>
                             <p class="course-instructor">Samiul Islam</p>
                             <div class="course-info">
                                 <div class="course-rating">
